@@ -1,11 +1,40 @@
+/********************
+*		NAV
+*********************/
+
+.navbar-nav>.active a,.navbar-nav>.active a:hover, .navbar-nav> li a:hover
+{
+	border:none;
+	border-bottom: 1px solid #2db0fe;
+}
+
+
 
 /*
 *
 *SERVICES*/
+#topSec
+{
+	/*height: 5px;*/
+}
 .services-content a
 {
 	color: #fff;
 	text-decoration: none;
+}
+.features-blue .item .description {
+    font-size: 20px;
+}
+.features-blue .item .name {
+    font-size: 30px;
+}
+.item a
+{
+	text-decoration: none;
+}
+.events-button
+{
+	margin-top: .5em;
 }
 
 /*FOOTER*/
@@ -32,4 +61,119 @@
 .social-icons a
 {
 	display: inline-block;
+}
+
+/*******************************
+*			FORM CSS
+********************************/
+form {
+  background: #fff;
+  /*padding: 4em 4em 2em;*/
+  padding: 1em;
+  max-width: 400px;
+  /*margin: 50px auto 0*/;
+  margin: 90px auto 0;
+  box-shadow: 0 0 1em #222;
+  border-radius: 2px;
+}
+form h2 {
+  margin: 0 0 50px 0;
+  padding: 10px;
+  text-align: center;
+  font-size: 30px;
+  color: #666666;
+  border-bottom: solid 1px #e5e5e5;
+}
+form p {
+  /*margin: 0 0 3em 0;*/
+  margin: 0 0 1em 0;
+  position: relative;
+}
+form input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  outline: none;
+  margin: 0;
+}
+form input[type="text"],
+form input[type="password"] {
+  background: #fff;
+  border: 1px solid #dbdbdb;
+  /*font-size: 1.6em;*/
+  /*padding: .8em .5em;*/
+  font-size: 1em;
+  padding:.6em .2em;
+  border-radius: 2px;
+}
+form input[type="text"]:focus,
+form input[type="password"]:focus {
+  background: #fff;
+}
+form span {
+  display: block;
+  background: #F9A5A5;
+  padding: 2px 5px;
+  color: #666;
+}
+form input[type="submit"] {
+  background: rgba(148, 186, 101, 0.7);
+  box-shadow: 0 3px 0 0 rgba(123, 163, 73, 0.7);
+  border-radius: 2px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 2em;
+  line-height: 1.6em;
+  /*margin: 2em 0 0;*/
+  outline: none;
+  padding: .8em 0;
+  text-shadow: 0 1px #68B25B;
+}
+form input[type="submit"]:hover {
+  background: #94af65;
+  text-shadow: 0 1px 3px rgba(70, 93, 41, 0.7);
+}
+form label {
+  position: absolute;
+  left: 8px;
+  top: 12px;
+  color: #999;
+  font-size: 16px;
+  display: inline-block;
+  padding: 4px 10px;
+  font-weight: 400;
+  background-color: rgba(255, 255, 255, 0);
+  -moz-transition: color 0.3s, top 0.3s, background-color 0.8s;
+  -o-transition: color 0.3s, top 0.3s, background-color 0.8s;
+  -webkit-transition: color 0.3s, top 0.3s, background-color 0.8s;
+  transition: color 0.3s, top 0.3s, background-color 0.8s;
+}
+form label.floatLabel {
+  top: -11px;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+}
+
+.frm-overlay
+{
+	position: absolute;
+	width: 100%;
+	height:100%;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+}
+.frm-body h2
+{
+	font-size: 14px;
+}
+.form-container
+{
+	/*
+	position: absolute;
+	z-index: 2;
+	margin: auto;
+	left
+	*/
 }
