@@ -1,0 +1,11 @@
+$(document).ready(function()
+{
+	//alert("Up and running!!");
+
+	//Temperary function
+	$(".events-button").click(function()
+	{
+		$("#frm-section").show();
+		window.location.href = "#topSec";
+	});
+});
