@@ -43,6 +43,36 @@
 </head>
 
 <body>
+    <div id="topSec"></div>
+    <div class="frm-overlay" id="frm-section" style="display: none;">
+        <div class="form-container">
+            <form action="#" method="post" class="frm-body">
+              <h2>Sign up to take this course</h2>
+                    <p>
+                        <label for="Fullname" class="floatLabel">Full Name</label>
+                        <input id="Fullname" name="Fullname" type="text">
+                    </p>
+                    <p>
+                        <label for="Email" class="floatLabel">Email</label>
+                        <input id="Email" name="Email" type="text">
+                    </p>
+                    <p>
+                        <label for="password" class="floatLabel">Password</label>
+                        <input id="password" name="password" type="password">
+                        <span>Enter a password longer than 8 characters</span>
+                    </p>
+                    <p>
+                        <label for="confirm_password" class="floatLabel">Confirm Password</label>
+                        <input id="confirm_password" name="confirm_password" type="password">
+                        <span>Your passwords do not match</span>
+                    </p>
+                    <p>
+                        <input type="submit" value="Create My Account" id="submit">
+                    </p>
+            </form>
+        </div>
+    </div>
+   
     <nav class="navbar navbar-default navbar-fixed-top" style="color:rgb(249,248,248);font-size:16px;background-color:rgb(41,44,47);">
         <div class="container">
             <div class="navbar-header">
@@ -240,31 +270,52 @@
                 <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div class="row projects">
-                <div class="col-md-4 col-sm-6 item"><img class="img-responsive" src="assets/img/desk.jpg">
-                    <h3 class="name">Small Business Online Conference by Office On The Go</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                <div class="col-md-4 col-sm-6 item">
+                    <a href="#">
+                        <img class="img-responsive" src="assets/img/desk.jpg">
+                        <h3 class="name">Small Business Online Conference by Office On The Go</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                    </a>
+                    <button class="btn btn-primary events-button" type="button">Join Event</button>
                 </div>
-                <div class="col-md-4 col-sm-6 item"><img class="img-responsive" src="assets/img/building.jpg">
-                    <h3 class="name">Abeeku and the maroons launch</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                <div class="col-md-4 col-sm-6 item">
+                    <a href="#">
+                        <img class="img-responsive" src="assets/img/building.jpg">
+                        <h3 class="name">Abeeku and the maroons launch</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                    </a>
+                    <button class="btn btn-primary events-button" type="button">Join Event</button>
                 </div>
-                <div class="col-md-4 col-sm-6 item"><img class="img-responsive" src="assets/img/loft.jpg">
-                    <h3 class="name">NVML 10 Year Celebrations</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                <div class="col-md-4 col-sm-6 item">
+                    <a href="#">
+                        <img class="img-responsive" src="assets/img/loft.jpg">
+                        <h3 class="name">NVML 10 Year Celebrations</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                    </a>
+                    <button class="btn btn-primary events-button" type="button">Join Event</button>
                 </div>
 
             </div>
             <div class="row projects">
-                <div class="col-md-6 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">StuDate Online Conference by Online Extra Lessons</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                <div class="col-md-6 col-sm-6 item">
+                    <a href="#">
+                        <img class="img-responsive" src="assets/img/minibus.jpeg">
+                        <h3 class="name">StuDate Online Conference by Online Extra Lessons</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                    </a>
+                    <button class="btn btn-primary events-button" type="button">Join Event</button>
                 </div>
 
                 <!--<div class="col-md-4 col-sm-6 "></div>-->
 
-                <div class="col-md-6 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
-                    <h3 class="name">Tech Teacher Online Conference by The Teachers’ Assistant Unit</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                <div class="col-md-6 col-sm-6 item">
+                    <a href="#">
+                        <img class="img-responsive" src="assets/img/minibus.jpeg">
+                        <h3 class="name">Tech Teacher Online Conference by The Teachers’ Assistant Unit</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+
+                    </a>
+                    <button class="btn btn-primary events-button" type="button">Join Event</button>
                 </div>
             </div>
         </div>
@@ -422,6 +473,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="assets/js/tabbed_slider.js"></script>
+    <script type="text/javascript" src="assets/js/frmHandler.js"></script>
+    <script type="text/javascript" src="assets/js/frmVal.js"></script>
+    <script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=62925783"></script>
 </body>
 
 </html>
